Refactor localization keys for prompts to use a consistent naming convention and update related HTML references

--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -80,13 +80,13 @@
     "customPrompts_form_label_enabled": {
         "message": "Povoleno"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "Uložit vše"
     },
     "customPrompts_do_reply": {
         "message": "Odpovědět"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "Přidat nový"
     },
     "customPrompts_close_button": {
