--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -20,10 +20,10 @@
     "customPrompts_form_required_fields": {
         "message": "Postulataj kampoj"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "Konservi ĉion"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "Aldoni novan"
     },
     "chatgpt_btn_retry": {
