--- a/_locales/zh_Hant/messages.json
+++ b/_locales/zh_Hant/messages.json
@@ -113,10 +113,10 @@
     "customPrompts_unsaved_changes": {
         "message": "有未儲存的變動！"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "儲存全部"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "新增"
     },
     "customPrompts_btnAddNewCommit": {
