--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -120,10 +120,10 @@
     "customPrompts_unsaved_changes": {
         "message": "Il y a des modifications non enregistrées !"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "Tout enregistrer"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "Ajouter nouveau"
     },
     "customPrompts_btnAddNewCommit": {
