--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -120,10 +120,10 @@
     "customPrompts_unsaved_changes": {
         "message": "Ima nespremljenih promjena!"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "Spremi sve"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "Dodaj novo"
     },
     "customPrompts_btnAddNewCommit": {
