--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -120,10 +120,10 @@
     "customPrompts_unsaved_changes": {
         "message": "Istnieją niezapisane zmiany!"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "Zapisz wszystko"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "Dodaj nowe"
     },
     "customPrompts_btnAddNewCommit": {
