--- a/_locales/pt-br/messages.json
+++ b/_locales/pt-br/messages.json
@@ -120,10 +120,10 @@
     "customPrompts_unsaved_changes": {
         "message": "Existem alterações não salvas!"
     },
-    "customPrompts_btnSaveAll": {
+    "btnSaveAll_string": {
         "message": "Salvar Tudo"
     },
-    "customPrompts_btnNew": {
+    "btnNew_string": {
         "message": "Adicionar Novo"
     },
     "customPrompts_btnAddNewCommit": {
