Refactor localization keys for prompts to use a consistent naming convention and update related HTML references

--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -41,7 +41,7 @@
     "prompt_this": {
         "message": "Zeptat se"
     },
-    "customPrompts_managePrompts_help": {
+    "more_info_string": {
         "message": "Další informace"
     },
     "customPrompts_start_saving": {
