--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -8,7 +8,7 @@
     "prompt_rewrite_formal": {
         "message": "Reverki formale"
     },
-    "customPrompts_managePrompts_help": {
+    "more_info_string": {
         "message": "Pliaj informoj"
     },
     "customPrompts_managePrompts": {
