--- a/_locales/zh_Hant/messages.json
+++ b/_locales/zh_Hant/messages.json
@@ -1,5 +1,5 @@
 {
-    "customPrompts_managePrompts_help": {
+    "more_info_string": {
         "message": "更多資訊"
     },
     "prompt_reply_advanced": {
