--- a/_locales/zh_Hans/messages.json
+++ b/_locales/zh_Hans/messages.json
@@ -65,7 +65,7 @@
     "customPrompts_managePrompts": {
         "message": "管理提示词"
     },
-    "customPrompts_managePrompts_help": {
+    "more_info_string": {
         "message": "更多信息"
     },
     "customPrompts_managePrompts_info_default": {
