mail_attachments_info placeholder added. see #446

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1143,6 +1143,10 @@
     "message": "Default language as defined in ThunderAI options.",
     "description": ""
   },
+  "placeholder_mail_attachments_info": {
+    "message": "Information about the attachments in the email",
+    "description": ""
+  },
   "empty": {
     "message": "This placeholder doesn't add any text, but it prevents the email body from being automatically appended at the end of the prompt.",
     "description": ""
