Added a message to explain to click on force completion after 7 seconds. see #419

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1632,5 +1632,9 @@
   "OpenAIComp_ClearModelsList_Confirm": {
     "message": "Are you sure you want to clear the Models List? This action cannot be undone.",
     "description": ""
+  },
+  "chatgpt_click_force_completion": {
+    "message": "It seems that it's not possible to get if ChatGPT has finished. Click here to force the completion of the job.",
+    "description": ""
   }
 }
