--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1660,5 +1660,9 @@
   "chatgpt_click_force_completion": {
     "message": "It seems that it's not possible to get if ChatGPT has finished. Click here to force the completion of the job.",
     "description": ""
+  },
+  "warn_API_needed": {
+    "message": "To use this feature, you need an API integration rather than the ChatGPT Web Integration. You can define a specific API in the feature settings page by first checking the checkbox above and then clicking the button on the left.",
+    "description": ""
   }
 }
