Anthropic API renamed to Cloude API. see #510

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "Използвайте ChatGPT, Google Gemini, Anthropic или Ollama, за да подобрите вашите имейли!"
+        "message": "Използвайте ChatGPT, Google Gemini, Claude или Ollama, за да подобрите вашите имейли!"
     },
     "menu_title": {
         "message": "ИИ"
