--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "¡Usa ChatGPT, Google Gemini, Anthropic u Ollama para mejorar tus emails!"
+        "message": "¡Usa ChatGPT, Google Gemini, Claude u Ollama para mejorar tus emails!"
     },
     "menu_title": {
         "message": "IA"
