--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "Használja a ChatGPT, Google Gemini, Anthropic vagy Ollama modelleket, hogy még jobbá tegye emailjeit!"
+        "message": "Használja a ChatGPT, Google Gemini, Claude vagy Ollama modelleket, hogy még jobbá tegye emailjeit!"
     },
     "menu_title": {
         "message": "MI"
