--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "Verwenden Sie ChatGPT, Google Gemini, Anthropic oder Ollama, um Ihre E-Mails zu verbessern!",
+        "message": "Verwenden Sie ChatGPT, Google Gemini, Claude oder Ollama, um Ihre E-Mails zu verbessern!",
         "description": "Description of the extension."
     },
     "menu_title": {
@@ -1072,22 +1072,22 @@
         "message": "Bitte korrigieren Sie die folgende E-Mail und beheben Sie alle Rechtschreib- oder Grammatikfehler. Antworten Sie nur mit dem korrigierten Text, ohne zusätzliche Kommentare oder sonstigen Text.\n\n„{%mail_typed_text%}“"
     },
     "prefs_Connection_type_Anthropic_API": {
-        "message": "Anthropic API"
+        "message": "Claude API"
     },
     "anthropic_empty_version": {
-        "message": "Sie haben keinen Versionsstring für die Anthropic-API hinzugefügt. Bitte fügen Sie einen auf der Optionsseite ein."
+        "message": "Sie haben keinen Versionsstring für die Claude-API hinzugefügt. Bitte fügen Sie einen auf der Optionsseite ein."
     },
     "Anthropic_Models_Error_fetching": {
-        "message": "Fehler beim Abrufen der Anthropic-Modelle"
+        "message": "Fehler beim Abrufen der Claude-Modelle"
     },
     "prefs_Anthropic_API_Key": {
-        "message": "Anthropic API-Schlüssel"
+        "message": "Claude API-Schlüssel"
     },
     "prefs_OptionText_anthropic_max_tokens_Info": {
         "message": "Die maximale Anzahl von Tokens, die in der Vervollständigung generiert werden soll. Die Anzahl der Tokens Ihres Prompts plus max_tokens darf die Kontextlänge des Modells nicht überschreiten."
     },
     "anthropic_api_request_failed": {
-        "message": "Anfrage an die Anthropic-API fehlgeschlagen"
+        "message": "Anfrage an die Claude-API fehlgeschlagen"
     },
     "_api_connecting": {
         "message": "Verbindungsversuch zu $api_string$ mit der folgenden Konfiguration...",
@@ -1098,28 +1098,28 @@
         }
     },
     "Anthropic_Models_Fetch": {
-        "message": "Anthropic-Modellliste aktualisieren"
+        "message": "Claude-Modellliste aktualisieren"
     },
     "Custom": {
         "message": "Benutzerdefiniert"
     },
     "Anthropic_Version": {
-        "message": "Anthropic-API-Version"
+        "message": "Claude-API-Version"
     },
     "prefs_OptionText_anthropic_max_tokens": {
-        "message": "Maximale Anzahl an Tokens für Anthropic"
+        "message": "Maximale Anzahl an Tokens für Claude"
     },
     "anthropic_empty_apikey": {
-        "message": "Sie haben keinen API-Schlüssel für die Anthropic-API hinzugefügt. Bitte fügen Sie einen auf der Optionsseite ein."
+        "message": "Sie haben keinen API-Schlüssel für die Claude-API hinzugefügt. Bitte fügen Sie einen auf der Optionsseite ein."
     },
     "ask_anthropic_api_permission_1": {
-        "message": "Um die Anthropic-API-Integration zu verwenden, müssen Sie die erforderliche Berechtigung erteilen."
+        "message": "Um die Claude-API-Integration zu verwenden, müssen Sie die erforderliche Berechtigung erteilen."
     },
     "Anthropic_Models": {
-        "message": "Anthropic Modelle"
+        "message": "Claude Modelle"
     },
     "anthropic_empty_model": {
-        "message": "Sie haben kein Modell für die Anthropic-API ausgewählt. Bitte wählen Sie eines auf der Optionsseite aus."
+        "message": "Sie haben kein Modell für die Claude-API ausgewählt. Bitte wählen Sie eines auf der Optionsseite aus."
     },
     "_api_connecting_model": {
         "message": "Modell",
