--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1080,34 +1080,34 @@
         }
     },
     "anthropic_empty_model": {
-        "message": "Vous n'avez pas choisi de modèle pour l'API Anthropic. Veuillez en sélectionner un dans la page des options."
+        "message": "Vous n'avez pas choisi de modèle pour l'API Claude. Veuillez en sélectionner un dans la page des options."
     },
     "Anthropic_Version_Info": {
         "message": "OBLIGATOIRE. Ne modifiez pas cette valeur sauf si vous savez ce que vous faites. Plus d'informations sur :"
     },
     "ask_anthropic_api_permission_1": {
-        "message": "Pour utiliser l'intégration de l'API Anthropic, vous devez accorder l'autorisation requise."
+        "message": "Pour utiliser l'intégration de l'API Claude, vous devez accorder l'autorisation requise."
     },
     "prefs_OptionText_anthropic_max_tokens_Info": {
         "message": "Le nombre maximum de jetons à générer dans la complétion. Le total des jetons de votre invite plus max_tokens ne peut pas dépasser la longueur du contexte du modèle."
     },
     "anthropic_empty_apikey": {
-        "message": "Vous n'avez pas ajouté de clé API pour l'API Anthropic. Veuillez en insérer une dans la page des options."
+        "message": "Vous n'avez pas ajouté de clé API pour l'API Claude. Veuillez en insérer une dans la page des options."
     },
     "anthropic_empty_version": {
-        "message": "Vous n'avez pas ajouté de chaîne de version pour l'API Anthropic. Veuillez en insérer une dans la page des options."
+        "message": "Vous n'avez pas ajouté de chaîne de version pour l'API Claude. Veuillez en insérer une dans la page des options."
     },
     "apiwebchat_selection_info": {
         "message": "Si vous sélectionnez du texte, seule cette portion sera prise en compte."
     },
     "Anthropic_Version": {
-        "message": "Version de l’API Anthropic"
+        "message": "Version de l’API Claude"
     },
     "prefs_OptionText_anthropic_max_tokens": {
-        "message": "Nombre maximum de jetons Anthropic"
+        "message": "Nombre maximum de jetons Claude"
     },
     "anthropic_api_request_failed": {
-        "message": "Échec de la requête à l'API Anthropic"
+        "message": "Échec de la requête à l'API Claude"
     },
     "prefs_OpenAIComp_AvailableServices": {
         "message": "Services Disponibles"
@@ -1124,19 +1124,19 @@
         }
     },
     "prefs_Anthropic_API_Key": {
-        "message": "Clé API Anthropic"
+        "message": "Clé API Claude"
     },
     "prefs_Connection_type_Anthropic_API": {
-        "message": "API Anthropic"
+        "message": "API Claude"
     },
     "Anthropic_Models": {
-        "message": "Modèles Anthropic"
+        "message": "Modèles Claude"
     },
     "Anthropic_Models_Fetch": {
-        "message": "Mettre à jour la liste des modèles Anthropic"
+        "message": "Mettre à jour la liste des modèles Claude"
     },
     "Anthropic_Models_Error_fetching": {
-        "message": "Erreur lors de la tentative de récupération des modèles Anthropic"
+        "message": "Erreur lors de la tentative de récupération des modèles Claude"
     },
     "_api_connecting_model": {
         "message": "Modèle",
