--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "Usa ChatGPT, Google Gemini, Anthropic oppure Ollama per migliorare le tue email!",
+        "message": "Usa ChatGPT, Google Gemini, Claude oppure Ollama per migliorare le tue email!",
         "description": "Description of the extension."
     },
     "menu_title": {
@@ -1078,46 +1078,46 @@
         "message": "HTML selezionato"
     },
     "prefs_Connection_type_Anthropic_API": {
-        "message": "API Anthropic"
+        "message": "API Claude"
     },
     "ask_anthropic_api_permission_1": {
-        "message": "Per utilizzare l'integrazione con l'API di Anthropic, è necessario concedere l'autorizzazione richiesta."
+        "message": "Per utilizzare l'integrazione con l'API di Claude, è necessario concedere l'autorizzazione richiesta."
     },
     "Anthropic_Version_Info": {
         "message": "OBBLIGATORIO. Non modificare questo valore a meno che tu non sappia esattamente cosa stai facendo. Maggiori informazioni su:"
     },
     "Anthropic_Models": {
-        "message": "Modelli di Anthropic"
+        "message": "Modelli di Claude"
     },
     "Anthropic_Models_Fetch": {
-        "message": "Aggiorna l'elenco dei modelli di Anthropic"
+        "message": "Aggiorna l'elenco dei modelli di Claude"
     },
     "Anthropic_Models_Error_fetching": {
-        "message": "Errore durante il tentativo di recupero dei modelli di Anthropic"
+        "message": "Errore durante il tentativo di recupero dei modelli di Claude"
     },
     "Anthropic_Version": {
-        "message": "Versione API di Anthropic"
+        "message": "Versione API di Claude"
     },
     "prefs_Anthropic_API_Key": {
-        "message": "Chiave API di Anthropic"
+        "message": "Chiave API di Claude"
     },
     "anthropic_empty_model": {
-        "message": "Non hai selezionato un modello per l'API di Anthropic. Scegline uno nella pagina delle opzioni."
+        "message": "Non hai selezionato un modello per l'API di Claude. Scegline uno nella pagina delle opzioni."
     },
     "prefs_OpenAIComp_AvailableServices_Info": {
         "message": "Scegli uno dei servizi disponibili per l'API compatibile con OpenAI oppure inseriscine uno manualmente."
     },
     "prefs_OptionText_anthropic_max_tokens": {
-        "message": "Numero massimo di token di Anthropic"
+        "message": "Numero massimo di token di Claude"
     },
     "prefs_OptionText_anthropic_max_tokens_Info": {
         "message": "Il numero massimo di token da generare nell'elaborazione. Il conteggio dei token del tuo prompt, sommato a max_tokens, non può superare la lunghezza di contesto del modello."
     },
     "anthropic_empty_apikey": {
-        "message": "Non hai aggiunto una chiave per l'API di Anthropic. Inseriscila nella pagina delle opzioni."
+        "message": "Non hai aggiunto una chiave per l'API di Claude. Inseriscila nella pagina delle opzioni."
     },
     "anthropic_empty_version": {
-        "message": "Non hai aggiunto la versione per l'API di Anthropic. Inseriscila nella pagina delle opzioni."
+        "message": "Non hai aggiunto la versione per l'API di Claude. Inseriscila nella pagina delle opzioni."
     },
     "_api_connecting": {
         "message": "Tentativo di connessione a $api_string$ utilizzando la seguente configurazione...",
@@ -1169,7 +1169,7 @@
         }
     },
     "anthropic_api_request_failed": {
-        "message": "Richiesta all'API di Anthropic non riuscita"
+        "message": "Richiesta all'API di Claude non riuscita"
     },
     "prefs_OptionText_reply_type_Info": {
         "message": "Questa è la modalità di risposta predefinita che verrà utilizzata quando rispondi a un'email. Puoi scegliere l'altra modalità nella finestra di risposta."
